--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="./CSS/styles.css">
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
@@ -33,9 +33,9 @@
 
 
         <ul class="list">
-            <li> <a class="link menu-link menu-link-on-light-theme"
+            <li> <a class="link menu-link-mail"
                     href="mailto:info@devstudio.com">info@devstudio.com</a> </li>
-            <li> <a class="link menu-link menu-link-on-light-theme" href="tel:+380961111111">+38 096 111 11 11</a> </li>
+            <li> <a class="link menu-link-tel" href="tel:+380961111111">+38 096 111 11 11</a> </li>
         </ul>
 
 
@@ -106,32 +106,32 @@
 
         <!--Команда-->
 
-        <section>
+        <section class="team">
 
             <h2 class="section-title">Наша команда</h2>
 
             <ul class="list">
-                <li>
+                <li class="list-item">
                     <img src="./images/team-card-1.jpg" alt="Ігор Дем'яненко" width="270" height="260" />
                     <h3 class="employee-name">Ігор Дем'яненко</h3>
                     <p class="employee-position" lang="en">Product Designer</p>
                 </li>
 
-                <li>
+                <li class="list-item">
                     <img src="./images/team-card-2.jpg" alt="Ольга Рєпіна" width="270" height="260" />
 
                     <h3 class="employee-name">Ольга Рєпіна</h3>
                     <p class="employee-position" lang="en">Frontend Developer</p>
                 </li>
 
-                <li>
+                <li class="list-item">
                     <img src="./images/team-card-3.jpg" alt="Микола Тарасов" width="270" height="260" />
 
                     <h3 class="employee-name">Микола Тарасов</h3>
                     <p class="employee-position" lang="en">Marketing</p>
                 </li>
 
-                <li>
+                <li class="list-item">
                     <img src="./images/team-card-4.jpg" alt="Михайло Єрмаков" width="270" height="260" />
 
                     <h3 class="employee-name">Михайло Єрмаков</h3>
