final update after corrections

--- a/portfolio.html
+++ b/portfolio.html
@@ -23,9 +23,9 @@
                     class="link-logo-wrap">Studio</span></a>
 
             <ul class="list menu">
-                <li> <a class="link menu-link menu-link-on-light-theme" href="./index.html">Студія</a></li>
-                <li> <a class="link menu-link menu-link-on-light-theme" href="./portfolio.html">Портфоліо</a></li>
-                <li> <a class="link menu-link menu-link-on-light-theme" href="#">Контакти</a> </li>
+                <li> <a class="link menu-link" href="./index.html">Студія</a></li>
+                <li> <a class="link menu-link current" href="./portfolio.html">Портфоліо</a></li>
+                <li> <a class="link menu-link" href="#">Контакти</a> </li>
             </ul>
 
 
