--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
 
         <nav class="page-nav">
 
-            <a class="link link-logo current" href="./index.html" lang="en">Web<span
+            <a class="link link-logo" href="./index.html" lang="en">Web<span
                     class="link-logo-wrap">Studio</span></a>
 
             <ul class="list menu">
-                <li> <a class="link menu-link menu-link-on-light-theme" href="./index.html">Студія</a></li>
-                <li> <a class="link menu-link menu-link-on-light-theme" href="./portfolio.html">Портфоліо</a></li>
-                <li> <a class="link menu-link menu-link-on-light-theme" href="#">Контакти</a> </li>
+                <li> <a class="link menu-link current" href="./index.html">Студія</a></li>
+                <li> <a class="link menu-link" href="./portfolio.html">Портфоліо</a></li>
+                <li> <a class="link menu-link" href="#">Контакти</a> </li>
             </ul>
 
 
